# ttokei

./: .env  Cargo.toml  README.md  analysis_queries.sql
migrations/2017-12-09-041032_create_schema/: down.sql  up.sql
src/: analysis.rs  git.rs  lib.rs  main.rs  traverse.rs
src/git/: deprecated.rs  mod.rs
src/output/: mod.rs  text.rs
src/output/postgres/: delete.rs  insert.rs  mod.rs  model.rs  query.rs  schema.rs
ttokei_docker/: Dockerfile  docker-compose.yml  metabase.sql  psql-connect.sh
