[package]
name = "ttokei"
version = "0.1.0"
authors = ["Jonathan Fok kan <jfokkan@gmail.com>"]

[dependencies]
log = "0.4.0-rc.1"
env_logger = "0.5.0-rc.1"
clap = "2.28.0"
tokei = "6.1.2"

chrono = "0.4"
humantime = "1.0.0"
git2 = "0.6"

diesel = { version = "1.0.0-beta1", features = ["postgres", "chrono"] }
diesel_infer_schema = { version = "1.0.0-beta1", features = ["postgres"] }
diesel_migrations = "1.0.0-beta1"